# picore

./: CMakeLists.txt  license.txt  post_init.cmake  readme.md
doc/: mainpage.dox
src/: CMakeLists.txt
src/binary_info_reader/: CMakeLists.txt  bi_reader.c
src/binary_info_reader/include/pr/: binary_info_reader.h
src/build_id/: CMakeLists.txt  build_id.c  generate_uuid_header.cmake
src/build_id/include/pr/: build_id.h
src/button/: CMakeLists.txt  button.c
src/button/include/pr/: button.h
src/cdc_interface/: CMakeLists.txt  cdc_interface.c  tusb_config.h
src/cdc_interface/include/: tusb_config.h
src/cdc_interface/include/pr/: cdc_interface.h
src/chip_uid32/include/pr/: chip_uid32.h
src/crc32/: CMakeLists.txt  crc32.c
src/crc32/include/pr/: crc32.h
src/endian/: CMakeLists.txt  endian.c
src/endian/include/pr/: endian.h
src/error/: CMakeLists.txt
src/error/include/pr/: error.h
src/fifo/: CMakeLists.txt  fifo.c
src/fifo/include/pr/: fifo.h
src/gpio_irq/: CMakeLists.txt  gpio_irq.c
src/gpio_irq/include/pr/: gpio_irq.h
src/i2c_bus/: CMakeLists.txt  i2c_bus.c
src/i2c_bus/include/pr/: i2c_bus.h
src/i2c_eeprom/: CMakeLists.txt  eeprom.c
src/i2c_eeprom/include/pr/: i2c_eeprom.h
src/i2c_gpio/: CMakeLists.txt  i2c_gpio.c
src/i2c_gpio/include/pr/: i2c_gpio.h
src/i2s_master_out/include/pr/: i2s_master_out.h
src/modbus/: CMakeLists.txt  modbus.c  modbus_crc16.c  modbus_crc16.h  modbus_protocol.h
src/modbus/include/pr/: modbus.h
src/pixel_led/: CMakeLists.txt  pixel_led.c  pixel_led.pio
src/pixel_led/include/pr/: pixel_led.h
src/queue/: CMakeLists.txt  queue.c
src/queue/include/pr/: queue.h
src/spi_master/: CMakeLists.txt  spi_master.c
src/spi_master/include/pr/: spi_master.h
src/stdio_fifo/: CMakeLists.txt  stdio_fifo.c
src/stdio_fifo/include/pr/: stdio_fifo.h
src/struct_compose/: CMakeLists.txt
src/struct_compose/include/pr/: struct_compose.h
src/task/: CMakeLists.txt  task.c
src/task/include/pr/: task.h
src/tiny_usb/: CMakeLists.txt  tiny_usb.c
src/tiny_usb/include/pr/: tiny_usb.h
src/uart/: CMakeLists.txt  uart.c
src/uart/include/pr/: uart.h
test/: CMakeLists.txt
test/binary_info/: CMakeLists.txt  main.c
test/modbus_responder/: CMakeLists.txt  client.py  main.c  tusb_config.h  usb_descriptors.c
test/stdio_usb/: CMakeLists.txt  main.c  usb_descriptors.c
test/task_demo/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
test/usb_loopback/: CMakeLists.txt  main.c  usb_descriptors.c
test/ws2812_blinker/: CMakeLists.txt  main.c
