add_subdirectory(error)
add_subdirectory(i2c_bus)
add_subdirectory(i2c_eeprom)
add_subdirectory(task)
add_subdirectory(fifo)
add_subdirectory(binary_info_reader)
add_subdirectory(build_id)
add_subdirectory(tiny_usb)
add_subdirectory(cdc_interface)
add_subdirectory(crc32)
add_subdirectory(queue)
add_subdirectory(pixel_led)
add_subdirectory(stdio_fifo)
add_subdirectory(struct_compose)
add_subdirectory(endian)
add_subdirectory(uart)
